# hybrid-faq-retrieval-benchmark

./: .gitignore  Dockerfile  Makefile  PROJECT_SPEC.md  README.md  pyproject.toml  requirements.txt  sitecustomize.py
configs/: api.yaml  bm25.yaml  dense.yaml  hybrid.yaml
data/demo_faq/: corpus.jsonl  qrels.tsv  queries.jsonl
examples/: sample_queries.md
faq_bench/: __init__.py
scripts/: compare_configs.py  export_report.py  query_api_example.py  run_benchmark.py
src/faq_bench/: __init__.py  api.py  config.py  data.py  evaluation.py  normalization.py  pipeline.py
src/faq_bench/rerankers/: __init__.py  cross_encoder.py
src/faq_bench/retrievers/: __init__.py  base.py  bm25.py  dense.py  hybrid.py
tests/: test_bm25.py  test_metrics.py  test_normalization.py
