[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "faq-bench"
version = "0.1.0"
description = "Hypothesis-driven FAQ retrieval benchmark with sparse, dense and hybrid retrieval"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
